# actual-budget-reporter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-weekly.sh  test_actualpy.py
.github/workflows/: docker-publish.yml
src/: __init__.py  actual_client.py  analyzer.py  discord_notifier.py  gemini_summarizer.py  reporter.py
